<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GarageOpener</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="url_description">URL to view - WebIOPi</string>
    <string name="default_url">http://android:3Muchpr0cs!@192.168.128.154:8000/garage.html</string>
    <string name="refresh_button_text">Refresh</string>
    <string name="door_button_1_text">Door 1</string>

</resources>
