<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/door_button_1_text"
        android:id="@+id/door_button_1"
        android:layout_marginTop="79dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/refreshButton"
        android:layout_marginStart="59dp"
        android:textStyle="bold"
        android:background="#ffff0000"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:onClick="operateDoor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_button_text"
        android:id="@+id/refreshButton"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="58dp"
        android:enabled="true"
        android:focusable="true"
        android:onClick="refreshWeb" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputUrl"
        android:layout_below="@+id/refreshButton"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/door_button_1"
        android:autoLink="web"
        android:clickable="true"
        android:contentDescription="@string/url_description"
        android:editable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textUri"
        android:text="@string/default_url" />

    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/webView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputUrl"
        android:focusable="true"
        android:clickable="true"
        android:focusableInTouchMode="true" />

</RelativeLayout>
